--- a/deploy_tools/inventory.ini
+++ b/deploy_tools/inventory.ini
@@ -1,5 +1,15 @@
 [staging]
-staging.japlan.org ansible_ssh_user=root ansible_ssh_private_key_file=~/.ssh/digital_ocean
+staging.japlan.org
 
 [production]
-japlan.org ansible_ssh_user=root ansible_ssh_private_key_file=~/.ssh/digital_ocean
+japlan.org
+
+[staging:vars]
+ansible_ssh_user=root
+ansible_ssh_private_key_file=~/.ssh/digital_ocean
+ansible_python_interpreter=/usr/bin/python3.12
+
+[production:vars]
+ansible_ssh_user=root
+ansible_ssh_private_key_file=~/.ssh/digital_ocean
+ansible_python_interpreter=/usr/bin/python3.12
